# slicksocket

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: cpm.cmake  set_triplet.cmake
include/: http_client.h  websocket_client.h
include/slicksocket/: callback.h  http_client.h  socket_client.h  socket_server.h  websocket_client.h
src/: http_client.cpp  ring_buffer.h  socket_client.cpp  socket_server.cpp  socket_service.cpp  socket_service.h  utils.h  websocket_client.cpp
tests/: CMakeLists.txt  cert.pem  http_client_tests.cpp
